# FysikkBot

./: Procfile  fysikkbot.py  pyproject.toml  requirements.txt
