[tool.poetry]
name = "fysikkbot"
version = "0.1.0"
description = ""
authors = ["JennStro <jennys1994@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
discord = "^1.0.1"
emoji = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
